--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -18,7 +18,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-
+      # 设置 nodejs 版本
+      - name: SetNodeVersion
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.8.0'
+      # nodejs 版本检查
+      - name: NodeCheck
+        run: node -v
       # 生成静态文件
       - name: Build
         run: npm install && npm run docs:build
